#135 fix footer bottom spacing

--- a/dll/static/src/scss/footer.scss
+++ b/dll/static/src/scss/footer.scss
@@ -3,7 +3,6 @@
   position: absolute;
   left: 0;
   width: 100%;
-  padding-bottom: 2rem;
 }
 .footer__text{
   font-size: 14px;
@@ -34,7 +33,6 @@
 }
 @media(min-width: 768px) {
   .footer {
-    bottom: 0;
     padding-bottom: 0;
   }
   .footer__partner-logo {
